--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
           if (e.touches[0]["force"] > 0) {
             pressure = e.touches[0]["force"]
           }
-          // x = e.touches[0].pageX * 2
-          // y = e.touches[0].pageY * 2
+          x = e.touches[0].offsetX
+          y = e.touches[0].offsetY
         } else {
           pressure = 1.0
           x = e.offsetX
@@ -96,8 +96,8 @@
           if (e.touches[0]["force"] > 0) {
             pressure = e.touches[0]["force"]
           }
-          x = e.touches[0].pageX * 2
-          y = e.touches[0].pageY * 2
+          x = e.touches[0].offsetX
+          y = e.touches[0].offsetY
         } else {
           pressure = 1.0
           x = e.offsetX
@@ -136,8 +136,8 @@
           if (e.touches[0]["force"] > 0) {
             pressure = e.touches[0]["force"]
           }
-          x = e.touches[0].pageX * 2
-          y = e.touches[0].pageY * 2
+          x = e.touches[0].offsetX
+          y = e.touches[0].offsetY
         } else {
           pressure = 1.0
           x = e.offsetX
