--- a/index.html
+++ b/index.html
@@ -65,8 +65,9 @@
           if (e.touches[0]["force"] > 0) {
             pressure = e.touches[0]["force"]
           }
-          x = e.touches[0].offsetX
-          y = e.touches[0].offsetY
+          var rect = e.target.getBoundingClientRect();
+          var x = e.targetTouches[0].pageX - rect.left;
+          var y = e.targetTouches[0].pageY - rect.top;
         } else {
           pressure = 1.0
           x = e.offsetX
@@ -96,8 +97,9 @@
           if (e.touches[0]["force"] > 0) {
             pressure = e.touches[0]["force"]
           }
-          x = e.touches[0].offsetX
-          y = e.touches[0].offsetY
+          var rect = e.target.getBoundingClientRect();
+          var x = e.targetTouches[0].pageX - rect.left;
+          var y = e.targetTouches[0].pageY - rect.top;
         } else {
           pressure = 1.0
           x = e.offsetX
@@ -136,8 +138,9 @@
           if (e.touches[0]["force"] > 0) {
             pressure = e.touches[0]["force"]
           }
-          x = e.touches[0].offsetX
-          y = e.touches[0].offsetY
+          var rect = e.target.getBoundingClientRect();
+          var x = e.targetTouches[0].pageX - rect.left;
+          var y = e.targetTouches[0].pageY - rect.top;
         } else {
           pressure = 1.0
           x = e.offsetX
