--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     canvas.height = 500
 
     erase.addEventListener('click', () => {
-
+      clicked = !clicked;
     })
 
 
@@ -66,8 +66,8 @@
             pressure = e.touches[0]["force"]
           }
           var rect = e.target.getBoundingClientRect();
-          var x = e.targetTouches[0].pageX - rect.left;
-          var y = e.targetTouches[0].pageY - rect.top;
+          var x = e.touches[0].pageX - rect.left;
+          var y = e.touches[0].pageY - rect.top;
         } else {
           pressure = 1.0
           x = e.offsetX
@@ -78,7 +78,7 @@
         isMousedown = true
         // lineWidth = (pressure * 50 * 0.8 + lineWidth * 0.2)
         context.lineWidth = lineWidth// pressure * 50;
-        context.strokeStyle = 'black'
+        clicked ? context.strokeStyle = 'black' : context.strokeStyle = 'white'
         context.lineCap = 'round'
         context.lineJoin = 'round'
         context.beginPath()
@@ -98,8 +98,8 @@
             pressure = e.touches[0]["force"]
           }
           var rect = e.target.getBoundingClientRect();
-          var x = e.targetTouches[0].pageX - rect.left;
-          var y = e.targetTouches[0].pageY - rect.top;
+          var x = e.touches[0].pageX - rect.left;
+          var y = e.touches[0].pageY - rect.top;
         } else {
           pressure = 1.0
           x = e.offsetX
@@ -111,7 +111,7 @@
         points.push({
           x, y, lineWidth
         })
-        context.strokeStyle = 'black'
+        clicked ? context.strokeStyle = 'white' : context.strokeStyle = 'black'
         context.lineCap = 'round'
         context.lineJoin = 'round'
         // context.lineWidth   = lineWidth// pressure * 50;
@@ -139,8 +139,8 @@
             pressure = e.touches[0]["force"]
           }
           var rect = e.target.getBoundingClientRect();
-          var x = e.targetTouches[0].pageX - rect.left;
-          var y = e.targetTouches[0].pageY - rect.top;
+          var x = e.touches[0].pageX - rect.left;
+          var y = e.touches[0].pageY - rect.top;
         } else {
           pressure = 1.0
           x = e.offsetX
@@ -149,7 +149,7 @@
           // y = e.pageY * 2
         }
         isMousedown = false
-        context.strokeStyle = 'black'
+        clicked ? context.strokeStyle = 'white' : context.strokeStyle = 'black'
         context.lineCap = 'round'
         context.lineJoin = 'round'
         if (points.length >= 3) {
