--- a/index.html
+++ b/index.html
@@ -2,82 +2,60 @@
   <head>
     <title>mixi v2</title>
     <meta charset="UTF-8">
-  <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <link rel="stylesheet" href="css/style.css">
 
-  <style>
-
-    @font-face {
-      font-family: "Apercu";
-      src: url("./apercu_regular_pro.otf")
-    }
-
-    body {
-      position: absolute;
-      margin: 0;
-      left: 0;
-      top: 0;
-      width: 100%;
-      height: 100%;
-      font-family: "Apercu";
-      font-size: 13px;
-      padding: 1em;
-      box-sizing: border-box;
-      background-color: #F1F1F1;
-    }
-    h1 {
-      color: #151515;
-      text-align: center;
-      font-size: 40px;
-      margin-top: 10px;
-      letter-spacing: 4px;
-    }
-    canvas {
-      /*position: absolute;*/
-      display: block;
-      width: 500px;
-      height: 500px;
-      border-radius: 4px;
-      margin: 0 auto;
-      background-color: #FFF;
-      box-shadow: 0 3px 5px rgba(0,0,0,0.10), 0 3px 5px rgba(0,0,0,0.10);
-    }
-
-    button{
-      outline: none;
-      border: none;
-      box-shadow: 0 1px 2px rgba(0,0,0,0.10), 0 1px 2px rgba(0,0,0,0.10);
-
-    }
-
-    .button-container{
-      width: 500px;
-      display: flex;
-      margin: 0 auto;
-      justify-content: space-between;
-      align-items: center;
-    }
-
-    .button-container button{
-      width: 45%;
-      height: 30px;
-      display: block;
-      float: left;
-      margin-top: 20px;
-      background: white;
-      border-radius: 4px;
-    }
-
-</style>
   </head>
 
   <body>
     <h1>MIXI</h1>
     <canvas>Sorry, your browser is too old for this demo.</canvas>
     <div class="button-container">
-      <button id="draw" style="background-color: #4F9AF7; color: #FFF">Draw</button>
-       <button id="erase">Erase</button>
+      <button id="draw" class="button button-lg" style="background-color: #F7F7F7;">Draw</button>
+      <button id="erase" class="button button-lg">Erase</button>
+      <button id="submit" class="button button-sm">Go!</button>
     </div>
+    <script src="https://www.gstatic.com/firebasejs/5.2.0/firebase.js"></script>
+    <script>
+      // Initialize Firebase
+      // We are using firebase as a quick and dirty way to register submissions
+      // of the classifier...Then, we can have another project running locally on a
+      // seperate machine that polls firebase and renders models based on the most recent classifer
 
+
+      // should probably hide this at some point
+      var config = {
+        apiKey: "AIzaSyCznH9t2il2tXzSXyf3_SRFEUlbZ3jCREg",
+        authDomain: "mixi-43ed3.firebaseapp.com",
+        databaseURL: "https://mixi-43ed3.firebaseio.com",
+        projectId: "mixi-43ed3",
+        storageBucket: "",
+        messagingSenderId: "446348254628"
+      };
+      firebase.initializeApp(config);
+
+      var database = firebase.database();
+
+      function writeType(classifier) {
+        firebase.database().ref('/demo/').set({
+          type: classifier,
+        });
+      }
+
+      function updateType(classifier) {
+        var typeData = {
+          type: classifier
+        };
+
+        var newPostKey = firebase.database().ref().child('demo').push().key;
+
+        var updates = {};
+        updates['/demo/'+newPostKey] = typeData;
+        console.log(updates);
+        return firebase.database().ref().update(updates);
+      }
+
+    </script>
 
     <script>
     // https://github.com/quietshu/apple-pencil-safari-api-test/blob/gh-pages/index.html
@@ -93,9 +71,11 @@
 
     var erase = document.getElementById('erase')
     var draw  = document.getElementById('draw')
+    var submit = document.getElementById('submit')
     var clicked = false;
-    erase.addEventListener('click', () => { clicked = true; erase.style.backgroundColor = '#4F9AF7'; draw.style.backgroundColor = "#FFF"; draw.style.color = "#000"; erase.style.color = "#FFF" })
-    draw.addEventListener('click', () => { clicked = false; draw.style.backgroundColor = '#4F9AF7'; erase.style.backgroundColor = "#FFF"; draw.style.color = "#FFF"; erase.style.color = "#000" })
+    erase.addEventListener('click', () => { clicked = true; erase.style.backgroundColor = '#F7F7F7'; draw.style.backgroundColor = "#FFF"; })
+    draw.addEventListener('click', () => { clicked = false; draw.style.backgroundColor = '#F7F7F7'; erase.style.backgroundColor = "#FFF"; })
+    submit.addEventListener('click', () => {updateType(1);})
 
 
     ;['touchstart', 'mousedown'].forEach(function (ev) {
