this jawn is working

--- a/public/index.html
+++ b/public/index.html
@@ -36,10 +36,34 @@
     var draw  = document.getElementById('draw')
     var submit = document.getElementById('submit')
     var clicked = false;
+    //Returns contents of a canvas as a png based data url, with the specified
+//background color
+    function canvasToImage(backgroundColor){
+        var w = canvas.width;
+        var h = canvas.height;
+        var data;
+
+        if(backgroundColor) {
+            data = context.getImageData(0, 0, w, h);
+            var compositeOperation = context.globalCompositeOperation;
+            context.globalCompositeOperation = "destination-over";
+            context.fillStyle = backgroundColor;
+            context.fillRect(0,0,w,h);
+        }
+
+        var imageData = this.canvas.toDataURL("image/png");
+        if(backgroundColor){
+            context.clearRect (0,0,w,h);
+            context.putImageData(data, 0,0);
+            context.globalCompositeOperation = compositeOperation;
+        }
+        return imageData;
+    }
+
     erase.addEventListener('click', () => { clicked = true; erase.style.backgroundColor = '#F7F7F7'; draw.style.backgroundColor = "#FFF"; })
     draw.addEventListener('click', () => { clicked = false; draw.style.backgroundColor = '#F7F7F7'; erase.style.backgroundColor = "#FFF"; })
     submit.addEventListener('click', () => {
-      var dataURL = canvas.toDataURL();
+      var dataURL = canvasToImage('#FFFFFF')
       $.ajax({
         type: "POST",
         url: '/type',
